COMMIT 28-04-2025